# ark-project

./: .dockerignore  .env.devnet  .env.example  .env.test  .eslintrc.cjs  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  addresses.json  biome.json  clippy.sh  contracts.json  data.rs  db.sqlite3  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  rust-toolchain.toml  tsconfig.json  turbo.json
.cargo/: config.toml
.changeset/: beige-games-approve.md  brown-buses-kick.md  brown-numbers-teach.md  chatty-bananas-hug.md  chilly-owls-burn.md  config.json  flat-chefs-repair.md  friendly-cycles-clean.md  gorgeous-rules-wink.md  green-carpets-crash.md  hungry-bobcats-push.md  khaki-pots-impress.md  khaki-shirts-type.md  loud-fans-fail.md  moody-gorillas-mate.md  nervous-starfishes-cry.md  ninety-shirts-cheer.md  odd-crews-clean.md  poor-wombats-dance.md  pre.json  quick-walls-march.md  shiny-cows-sing.md  silver-needles-mate.md  six-rings-drive.md  sixty-coats-yawn.md  sixty-queens-applaud.md  slimy-bananas-mate.md  small-crabs-confess.md  smooth-bottles-work.md  stupid-planets-decide.md  thirty-apes-sing.md  tidy-pumpkins-perform.md  tough-spoons-sit.md  two-zebras-sort.md  wild-panthers-confess.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.scripts/: exportABi.ts  formatPackageJson.ts  generateProxyPackages.ts  updateVersion.ts
admin/: pnpm-lock.yaml
ark-collection-update-lambda/: Cargo.toml
ark-db/: Cargo.toml
ark-metadata/: Cargo.toml
ark-starknet/: Cargo.toml
ark-starknet/src/: client.rs  utils.rs
artifacts/: contract.abi.json  orderbook.abi.json  orderbook.json  starknet_utils.json
contracts/: .tool-versions  Makefile  README.md  Scarb.toml
crates/ark-collection-update-lambda/: Cargo.toml
crates/ark-collection-update-lambda/src/: lib.rs  main.rs
crates/ark-core/: Cargo.toml
crates/ark-core/src/: lib.rs
crates/ark-core/src/managers/: block_manager.rs  collection_manager.rs  event_manager.rs  mod.rs  token_manager.rs
crates/ark-indexer/: Cargo.toml  README.md
crates/ark-indexer/src/: lib.rs
crates/ark-indexer/src/managers/: block_manager.rs  collection_manager.rs  event_manager.rs  mod.rs  token_manager.rs
crates/ark-marketplace-indexer/: Cargo.toml
crates/ark-marketplace-indexer/src/: fetch_unframed_events.rs  main.rs  utils.rs
crates/ark-marketplace-indexer/src/unframed/: events.rs
crates/ark-metadata/: Cargo.toml  README.md
crates/ark-metadata/src/: cairo_string_parser.rs  cairo_strings.rs  elasticsearch_manager.rs  file_manager.rs  get.rs  lib.rs  main.rs  metadata.rs  metadata_manager.rs  normalize_metadata.rs  storage.rs  types.rs  utils.rs
crates/ark-metadata/src/metadata/: cairo_string_parser.rs  metadata_models.rs  mod.rs  normalization.rs
crates/ark-starknet/: Cargo.toml  README.md
crates/ark-starknet/src/: byte_array.rs  cairo_string_parser.rs  client.rs  client2.rs  collection_manager.rs  format.rs  lib.rs  utils.rs
crates/ark-starknet/src/client/: http.rs  mod.rs
crates/ark-storage/: Cargo.toml
crates/ark-storage/src/: default_storage.rs  lib.rs  prisma.rs  storage_manager.rs  types.rs  utils.rs
crates/ark-tables/: Cargo.toml  README.md
crates/ark-tables/src/: create.rs  delete.rs  logger.rs  main.rs
crates/ark-transfers/: Cargo.toml
crates/ark-transfers/src/: lib.rs  main.rs  mint.rs  transfer.rs  utils.rs
crates/arkchain-indexer/: .env.example  Cargo.toml  Dockerfile
crates/arkchain-indexer/src/: main.rs
crates/diri/: Cargo.toml  README.md
crates/diri/artifacts/: orderbook.abi.json  orderbook.json
crates/diri/examples/: display-events.rs
crates/diri/src/: event_handler.rs  lib.rs  mod.rs  orderbook.rs  storage.rs
crates/diri/src/orderbook/: mod.rs
crates/diri/src/orderbook/events/: common.rs  mod.rs  order_cancelled.rs  order_executed.rs  order_fulfilled.rs  order_placed.rs  rollback_status.rs
crates/diri/src/storage/: mod.rs  types.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: lib.rs
crates/orderbook/src/events/: common.rs  mod.rs  order_cancelled.rs  order_executed.rs  order_fulfilled.rs  order_placed.rs  rollback_status.rs
crates/pontos/: Cargo.toml  README.md
crates/pontos/src/: event_handler.rs  lib.rs
crates/pontos/src/ark-storage/: Cargo.toml
crates/pontos/src/ark-storage/src/: default_storage.rs  lib.rs  prisma.rs
crates/pontos/src/managers/: block_manager.rs  collection_manager.rs  contract_manager.rs  event_manager.rs  mod.rs  token_manager.rs
crates/pontos/src/storage/: default_storage.rs  mod.rs  prisma.rs  storage.rs  storage_manager.rs  types.rs
crates/pontos/src/storage/migrations/: 001_create_token_table.sql  002_create_event_table.sql  003_create_collection_table.sql  004_create_block_table.sql
crates/pontos/src/storage/sqlx/: default_storage.rs  marketplace_storage.rs  mod.rs  types.rs
crates/pontos/src/storage/sqlx/migrations/: 0_default.sql  1_remove_token_id_hex.sql
crates/sana/: Cargo.toml  PERFORMANCE.md  README.md
crates/sana/src/: event_handler.rs  lib.rs
crates/sana/src/managers/: block_manager.rs  contract_manager.rs  event_manager.rs  mod.rs  pending_block_manager.rs  token_manager.rs
crates/sana/src/storage/: mod.rs  types.rs
crates/sana/src/storage/sqlx/: default_storage.rs  marketplace_storage.rs  mod.rs  types.rs
crates/solis/: .gitignore  Cargo.toml  README.md  messaging.goerli.json  messaging.json  messaging.local.json
crates/solis-legacy/: .gitignore  Cargo.toml  messaging.local.json
crates/solis-legacy/src/: main.rs
crates/solis-legacy/src/contracts/: orderbook.rs
crates/solis/src/: args.rs  error.rs  hooker.rs  main.rs  solis_args.rs  utils.rs
crates/solis/src/contracts/: account.rs  mod.rs  orderbook.rs  starknet_utils.rs
data/: katana_key.json
examples/: arkchain_indexer.rs  diri.rs  nft_indexer.rs  pontos.rs  pontos_pending.rs  pontos_sqlx.rs
prisma/: dev.db  dev.db-journal  schema.prisma
scripts/: spawn-indexer-tasks.sh
skip_examples/: diri.rs  pontos.rs  pontos_pending.rs  pontos_sqlx.rs  sana.rs  sana_pending.rs  (+1 more)
(+597 files in other folders)
