[package]
name = "arkproject"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Screenshot Labs", "Starknet community"]
license = "MIT OR Apache-2.0"
readme = "README.md"
#documentation = "https://docs.rs/..."
repository = "https://github.com/TheArkProjekt/arkproject-rs"
homepage = "https://arkproject.dev"
description = """
ArkProject libraries written in Rust
"""

[workspace]
members = [
  "crates/ark-metadata",
  "crates/ark-starknet",
  "crates/pontos",
  "crates/solis",
  "crates/diri",
]

[workspace.dependencies]
ark-starknet = { path = "./crates/ark-starknet" }
ark-metadata = { path = "./crates/ark-metadata" }
pontos = { path = "./crates/pontos" }
diri = { path = "./crates/diri" }
async-trait = "0.1.73"
starknet = "0.5.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"

# Thoses dependencies are used by the examples + the lib.rs.
[dependencies]
futures = "0.3.28"
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true
tokio.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
pontos.workspace = true
diri.workspace = true
starknet.workspace = true

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", rev = "c794d1b" }

[patch.crates-io]
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "262b7eb4b11ab165a2a936a5f914e78aa732d4a2" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "262b7eb4b11ab165a2a936a5f914e78aa732d4a2" }

[dev-dependencies]
mockall = "0.11.4"
