[package]
name = "arkproject"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Screenshot Labs", "Starknet community"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheArkProjekt/arkproject-rs"
homepage = "https://arkproject.dev"
description = """
ArkProject libraries written in Rust
"""

[workspace]
members = [
  "crates/ark-metadata",
  "crates/ark-starknet",
  "crates/pontos",
  "crates/diri",
  "crates/sana",
  "crates/orderbook",
]

[workspace.dependencies]
ark-starknet = { path = "./crates/ark-starknet" }
ark-metadata = { path = "./crates/ark-metadata" }
pontos = { path = "./crates/pontos" }
sana = { path = "./crates/sana" }
diri = { path = "./crates/diri" }
orderbook = { path = "./crates/orderbook" }

async-trait = "0.1.73"
starknet = "0.10.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.40"

# Dependencies used by the examples + the lib.rs.
[dependencies]
futures = "0.3.28"
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true
tokio.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
pontos = { path = "./crates/pontos", features = ["sqlxdb"] }
sana = { path = "./crates/sana", features = ["sqlxdb"] }
diri.workspace = true
orderbook.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
mockall = "0.12.1"
url = "2.3.1"
starknet = "0.7.0"
