[package]
name = "arkproject"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Screenshot Labs", "Starknet community"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheArkProjekt/arkproject-rs"
homepage = "https://arkproject.dev"
description = """
ArkProject libraries written in Rust
"""
exclude = ["crates/solis"]

[workspace]
members = [
  "crates/ark-metadata",
  "crates/ark-starknet",
  "crates/pontos",
  "crates/solis",
  "crates/diri",
  "crates/sana",
]

[workspace.dependencies]
ark-starknet = { path = "./crates/ark-starknet" }
ark-metadata = { path = "./crates/ark-metadata" }
pontos = { path = "./crates/pontos" }
sana = { path = "./crates/sana" }
diri = { path = "./crates/diri" }
async-trait = "0.1.73"
starknet = "0.10.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
thiserror = "1.0.65"

# Dependencies used by the examples + the lib.rs.
[dependencies]
futures = "0.3.28"
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true
tokio.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
pontos = { path = "./crates/pontos", features = ["sqlxdb"] }
sana = { path = "./crates/sana", features = ["sqlxdb"] }
diri.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
alloy-primitives = { version = "0.7.1", default-features = false }
alloy-sol-types = { version = "0.7.1", default-features = false }

# ** SOLIS **
[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", rev = "e6e9c90" }

[patch.crates-io]
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }

alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "5a5f29eb7d92a194bb2c67b1f879e84b2c6716ce" }

[dev-dependencies]
mockall = "0.12.1"
url = "2.3.1"
starknet = "0.7.0"
