[package]
name = "ark-starknet"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
starknet = "0.5.0"
dotenv = "0.15.0"
serde = "1.0.164"
log = "0.4"
ark-db = { path = "../ark-db" }
hex = "0.4.3"
num-bigint = { version = "0.4.3", default-features = false }