[package]
name = "ark-collection-update-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
starknet = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
ark-db = { path = "../ark-db" }
ark-starknet = { path = "../ark-starknet" }
aws-sdk-dynamodb = "0.29.0"
log = "0.4"

