[package]
name = "ark-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
regex = "1.5.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
starknet = "0.5.0"
dotenv = "0.15.0"
serde = "1.0.164"
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.29.0"
clap = "4.3.8"
structopt = { version = "0.3", default-features = false }
hex = "0.4.3"
aws-types = "0.56"
num-bigint = { version = "0.4.3", default-features = false }
log = "0.4"
simple_logger = "4.2.0"
openssl = { version = "0.10", features = ["vendored"] }

ark-db.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
ark-storage.workspace = true
