[package]
name = "ark-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
dotenv = "0.15.0"
log = "0.4"

anyhow.workspace = true
tokio.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
ark-storage.workspace = true
starknet.workspace = true

[dev-dependencies]
ark-storage = { path = "../ark-storage", features = ["mock"] }
ark-starknet = { path = "../ark-starknet", features = ["mock"] }
mockall = "0.11.4"