[package]
name = "ark-marketplace-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = "1.0.164"
log = "0.4"
ark-metadata = { path = "../ark-metadata" }
aws-sdk-dynamodb = "0.28.0"
dotenv = "0.15.0"
starknet = "0.5.0"
url = "2.4.0"
ark-db = { path = "../ark-db" }
aws-config = "0.55.3"
aws-types = "0.55.3"
