[package]
name = "ark-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
dotenv = "0.15.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
starknet = "0.5.0"
tokio = { version = "1", features = ["full"] }
ark-starknet.workspace = true
ark-storage.workspace = true
urlencoding = "2.1.2"
base64 = "0.21.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
async-trait.workspace = true

[dev-dependencies]
ark-starknet = { path = "../ark-starknet", features = ["mock"] }
ark-storage = { path = "../ark-storage", features = ["mock"] }
mockall = "0.11.4"
