[package]
name = "ark-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
base64 = "0.21.0"
tracing = "0.1"
starknet.workspace = true
ark-starknet.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono = "0.4"
num-bigint = "0.4.4"

[dev-dependencies]
ark-starknet = { path = "../ark-starknet", features = ["mock"] }
mockall = "0.12.1"

[features]
mock = []
