[package]
name = "ark-starknet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
starknet.workspace = true
url = "2.3.1"
regex = "1.9.1"
mockall = "0.11.2"
num-bigint = "0.4.4"
num-traits = "0.2.17"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
mock = []
