[package]
name = "ark-starknet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
starknet.workspace = true
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
url = "2.5.2"
regex = "1.9.1"
mockall = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.17"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
mock = []
