[package]
name = "ark-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.5.0"
num-bigint = { version = "0.4.3", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
log = "0.4.14"
serde_json = "1.0"
mockall = "0.11.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }

[features]
mock = []
