[package]
name = "ark-tables"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
simple_logger = "4.2.0"
log = "0.4"
aws-sdk-dynamodb = "0.29.0"
aws-config = "0.56.0"
dotenv = "0.15.0"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.44"