[package]
name = "ark-transfers"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-kinesis = "0.29.0"
log = "0.4"
serde_json = "1.0"
aws-sdk-dynamodb = "0.29.0"
ark-db = { path = "../ark-db" }
ark-metadata = { path = "../ark-metadata" }
ark-starknet = { path = "../ark-starknet" }
reqwest = { version = "0.11", features = ["json"] }
starknet = "0.5.0"
