[package]
name = "ark-transfers"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-kinesis = "0.29.0"
simple_logger = "4.2.0"
log = "0.4"
serde_json = "1.0"
aws-sdk-dynamodb = "0.29.0"
ark-db = { path = "../ark-db" }
ark-metadata = { path = "../ark-metadata" }
ark-starknet = { path = "../ark-starknet" }
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
starknet = "0.5.0"
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["full"] }
aws-config= { version = "0.56.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
aws_lambda_events = "0.10.0"
base64 = "0.21.2"