[package]
name = "diri"
version = "0.1.0"
edition = "2021"
description = """
Diri is a library / binary related to the
indexation of Solis data (orderbook smart contracts).
"""

[lib]
path = "src/lib.rs"

[[example]]
name = "display-events"
path = "examples/display-events.rs"

[dependencies]
futures = "0.3.28"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# TODO: add more stuff to the workspace after merge.
url = "2.3.1"
regex = "1.9.1"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.32"
# For now, Diri can't use the ark-starknet due to the dependency
# on ArkProjectNFTs for of starknet-rs.
starknet = "0.12.0"
starknet-types-core = "0.1.7"

tracing = "0.1"
num-bigint = "0.4.4"
num-traits = "0.2.19"

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

orderbook = { path = "../orderbook" }

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive", "env", "string"] }
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
