[package]
name = "diri"
version = "0.1.0"
edition = "2021"
description = """
Diri is a library / binary related to the
indexation of Solis data (orderbook smart contracts).
"""

[dependencies]
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TODO: add more stuff to the workspace after merge.
url = "2.3.1"
clap = { version = "4.3.19", features = ["derive", "env", "string"] }
regex = "1.10.6"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
thiserror = "1.0.65"
# For now, Diri can't use the ark-starknet due to the dependency
# on ArkProjectNFTs for of starknet-rs.
starknet = "0.8.0"
tracing = "0.1"
num-bigint = "0.4.4"
num-traits = "0.2.17"

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.1.8", features = [
  "abigen-rs",
] }

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
