[package]
name = "pontos"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
dotenv = "0.15.0"
log = "0.4"
futures = "0.3"
num-bigint = { version = "0.4.3", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.32"

anyhow.workspace = true
tokio.workspace = true
ark-starknet.workspace = true
ark-metadata.workspace = true
starknet.workspace = true
async-trait.workspace = true
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }

[dev-dependencies]
ark-starknet = { path = "../ark-starknet", features = ["mock"] }
mockall = "0.11.4"
