
[package]
name = "solis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_matches = "1.5.0"
async-trait = "0.1.68"
base64 = "0.21.2"
blockifier = { git = "https://github.com/starkware-libs/blockifier", tag = "v0.4.0-rc9.2" }
cairo-lang-casm = "=2.4.0"
cairo-lang-compiler = "=2.4.0"
cairo-lang-debug = "=2.4.0"
cairo-lang-defs = "=2.4.0"
cairo-lang-diagnostics = "=2.4.0"
cairo-lang-filesystem = "=2.4.0"
cairo-lang-formatter = "=2.4.0"
cairo-lang-language-server = "=2.4.0"
cairo-lang-lowering = "=2.4.0"
cairo-lang-parser = "=2.4.0"
cairo-lang-plugins = "=2.4.0"
cairo-lang-project = "=2.4.0"
cairo-lang-semantic = { version = "=2.4.0", features = ["testing"] }
cairo-lang-sierra = "=2.4.0"
cairo-lang-sierra-generator = "=2.4.0"
cairo-lang-sierra-to-casm = "=2.4.0"
cairo-lang-starknet = "=2.4.0"
cairo-lang-syntax = "=2.4.0"
cairo-lang-test-plugin = "=2.4.0"
cairo-lang-test-runner = "=2.4.0"
cairo-lang-test-utils = "=2.4.0"
cairo-lang-utils = "=2.4.0"
cairo-vm = "0.8.2"
camino = { version = "1.1.2", features = ["serde1"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
clap_complete = "4.3"
colored = "2"
console = "0.15.7"
convert_case = "0.6.0"
crypto-bigint = { version = "0.5.3", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
flate2 = "1.0.24"
futures = "0.3.28"
hex = "0.4.3"
indoc = "1.0.7"
itertools = "0.10.3"
lazy_static = "1.4.0"
metrics-process = "1.0.9"
num-bigint = "0.4"
once_cell = "1.0"
parking_lot = "0.12.1"
pretty_assertions = "1.2.1"
rayon = "1.8.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/ArkProjectNFTs/scarb.git", tag = "v2.4.0-fix-version" }
scarb-ui = { git = "https://github.com/ArkProjectNFTs/scarb.git", tag = "v2.4.0-fix-version" }
semver = "1.0.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.3.1"
smol_str = { version = "0.2.0", features = ["serde"] }
sqlx = { version = "0.7.2", features = [
    "chrono",
    "macros",
    "regexp",
    "runtime-async-std",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
starknet = "0.8.0"
starknet-crypto = "0.6.1"
starknet_api = "0.6.0-rc3"
strum = "0.25"
strum_macros = "0.25"
test-log = "0.2.11"
thiserror = "1.0.65"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
url = "2.4.0"

# server
hyper = "0.14.27"
warp = "0.3"

# katana-core = { path = "../../../dojo/crates/katana/core", features = [
#     "messaging",
#     "starknet-messaging",
# ] }
# katana-rpc = { path = "../../../dojo/crates/katana/rpc/rpc" }
# katana-rpc-api = { path = "../../../dojo/crates/katana/rpc/rpc-api" }
# katana-primitives = { path = "../../../dojo/crates/katana/primitives" }

katana-core = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.2.3-solis", features = [
    "messaging",
    "starknet-messaging",
] }
katana-rpc = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.2.3-solis" }
katana-rpc-api = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.2.3-solis" }
katana-primitives = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.2.3-solis" }

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.4-fix-ord", features = [
    "abigen-rs",
] }
