[package]
name = "solis"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.68"
blockifier = { git = "https://github.com/starkware-libs/blockifier" }
cairo-lang-casm = "2.3.1"
cairo-lang-compiler = "2.3.1"
cairo-lang-debug = "2.3.1"
cairo-lang-defs = "2.3.1"
cairo-lang-diagnostics = "2.3.1"
cairo-lang-filesystem = "2.3.1"
cairo-lang-formatter = "2.3.1"
cairo-lang-language-server = "2.3.1"
cairo-lang-lowering = "2.3.1"
cairo-lang-parser = "2.3.1"
cairo-lang-plugins = "2.3.1"
cairo-lang-project = "2.3.1"
cairo-lang-semantic = { version = "2.3.1", features = ["testing"] }
cairo-lang-sierra = "2.3.1"
cairo-lang-sierra-generator = "2.3.1"
cairo-lang-sierra-to-casm = "2.3.1"
cairo-lang-starknet = "2.3.1"
cairo-lang-syntax = "2.3.1"
cairo-lang-test-runner = "2.3.1"
cairo-lang-test-utils = "2.3.1"
cairo-lang-utils = "2.3.1"
cairo-vm = "0.8.2"
camino = { version = "1.1.2", features = ["serde1"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
clap_complete = "4.3"
colored = "2"
console = "0.15.7"
convert_case = "0.6.0"
env_logger = "0.10.0"
flate2 = "1.0.24"
futures = "0.3.28"
indoc = "1.0.7"
itertools = "0.10.3"
num-bigint = "0.4"
once_cell = "1.0"
parking_lot = "0.12.1"
pretty_assertions = "1.2.1"
rayon = "0.9.0"
salsa = "0.16.1"
scarb = { git = "https://github.com/software-mansion/scarb", rev = "0c8def3" }
scarb-ui = { git = "https://github.com/software-mansion/scarb", rev = "0c8def3" }
semver = "1.0.5"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.3.1"
smol_str = { version = "0.2.0", features = ["serde"] }
starknet = "0.7.0"
starknet-crypto = "0.6.1"
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "ecc9b6946ef13003da202838e4124a9ad2efabb0" }
test-log = "0.2.11"
thiserror = "1.0.32"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.4"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.4.0"

# katana-core = { path = "../../../dojo/crates/katana/core", features = ["messaging", "starknet-messaging"] }
# katana-rpc = { path = "../../../dojo/crates/katana/rpc" }

katana-core = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.1.0-solis", features = ["messaging", "starknet-messaging"] }
katana-rpc = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.1.0-solis" }

starknet-abigen-parser = { git = "https://github.com/glihm/starknet-abigen-rs", tag = "v0.1.4-beta5" }
starknet-abigen-macros = { git = "https://github.com/glihm/starknet-abigen-rs", tag = "v0.1.4-beta5" }
