[package]
description = "Modified katana to match ArkProject requirement."
edition = "2021"
license = "Apache-2.0"
name = "solis"
repository = "https://github.com/ArkProjectNFTs/dojo"
version = "0.7.0-alpha-1"

[dependencies]
alloy-primitives = "0.7.1"
anyhow = "1.0.80"
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.3"
common = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "common" }
console = "0.15.7"
dojo-metrics = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "dojo-metrics" }
katana-core = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "katana-core", default-features = false }
katana-executor = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "katana-executor", default-features = false }
katana-primitives = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "katana-primitives" }
katana-rpc-api = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "katana-rpc-api" }
katana-rpc = { git = "https://github.com/ArkProjectNFTs/dojo", tag = "v0.7.0.1-solis", package = "katana-rpc" }
serde_json = "1.0.97"
shellexpand = "3.1.0"
starknet_api = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing = "0.1.34"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = ["blockifier", "jemalloc", "messaging"]

blockifier = ["katana-executor/blockifier"]
# Disable until SIR support Cairo 2.6.3
# sir = ["katana-executor/sir"]

jemalloc = ["dojo-metrics/jemalloc"]
messaging = ["katana-core/messaging"]
starknet-messaging = ["katana-core/starknet-messaging", "messaging"]
